<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle.labs.mlrg.olcut</groupId>
    <artifactId>olcut</artifactId>
    <version>4.1.9-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <jsk.version>2.2.3</jsk.version>
        <jackson.version>2.9.4</jackson.version>
        <jline.version>2.14.6</jline.version>
        <junit.version>4.12</junit.version>
    </properties>
    <modules>
        <module>olcut-core</module>
        <module>olcut-config-json</module>
        <module>olcut-config-edn</module>
        <module>olcut-config-jini</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>citadel</id>
            <name>citadel-releases</name>
            <url>http://citadel.us.oracle.com/artifactory/libs-release-local</url>
        </repository>
        <snapshotRepository>
            <id>citadel</id>
            <name>citadel-snapshot</name>
            <url>http://citadel.us.oracle.com/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

   	<repositories>
	<repository>
		<id>artifactory-oraclecorp</id>
		<name>artifactory-oraclecorp</name>
		<url>https://artifactory-slc.oraclecorp.com/artifactory/repo1-cache</url>
	</repository>		
	<repository>
		<snapshots>
			<enabled>false</enabled>
		</snapshots>
		<id>citadel-central</id>
		<name>libs-release</name>
		<url>http://citadel.us.oracle.com/artifactory/libs-release</url>
	</repository>
	<repository>
		<snapshots />
		<id>citadel-snapshots</id>
		<name>libs-snapshot</name>
		<url>http://citadel.us.oracle.com/artifactory/libs-snapshot</url>
	</repository>
	<repository>
		<snapshots>
			<enabled>false</enabled>
		</snapshots>
		<id>citadel-ext</id>
		<name>ext-release-local</name>
		<url>http://citadel.us.oracle.com/artifactory/ext-release-local</url>
	</repository>
	<repository>
		<id>central</id>
		<url>http://repo1.maven.org/maven2</url>
		<releases>
			<enabled>false</enabled>
		</releases>
		<snapshots>
			<enabled>false</enabled>
		</snapshots>
	</repository>
	</repositories>

	<dependencyManagement>
	<dependencies>
        <dependency>
            <groupId>jline</groupId>
            <artifactId>jline</artifactId>
            <version>${jline.version}</version>
        </dependency>
       <dependency>
            <groupId>net.jini</groupId>
            <artifactId>jsk-platform</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>net.jini</groupId>
            <artifactId>jsk-dl</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>net.jini</groupId>
            <artifactId>jsk-lib</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>net.jini</groupId>
            <artifactId>jsk-resources</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>net.jini</groupId>
            <artifactId>jsk-policy</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.river</groupId>
            <artifactId>reggie</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.river</groupId>
            <artifactId>reggie-dl</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.river</groupId>
            <artifactId>start</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.river</groupId>
            <artifactId>tools</artifactId>
            <version>${jsk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
		    <scope>test</scope>
        </dependency>
    </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<show>public</show>
					<failOnError>false</failOnError>
					<linksource>true</linksource>
					<nohelp>true</nohelp>
				</configuration>
			</plugin>
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jdeps-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jdkinternals</goal>  verify main classes
                            <goal>test-jdkinternals</goal>  verify test classes
                        </goals>
                    </execution>
                </executions>
                <configuration>
                </configuration>
            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <testSource>1.8</testSource>
                    <testTarget>1.8</testTarget>
                    <compilerArgs>
                        <arg>
                            -Xlint:unchecked
                        </arg>
                        <arg>
                            -Xlint:deprecation
                        </arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
